parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALL
    ARABIC_DOUBLE_QUOTE
    AS
    COLUMN_NUMBER
    COUNT
    DISTINCT
    DOT
    DOUBLE_QUOTE
    INNER
    JOIN
    LBRACE
    L_SQ_BRACE
    PERCENT
    RBRACE
    R_ARABIC_DOUBLE_QUOTE
    R_SQ_BRACE
    SINGLE_QUOTE
    SUM

Grammar

Rule 0     S' -> start
Rule 1     start -> select
Rule 2     start -> insert
Rule 3     start -> update
Rule 4     start -> delete
Rule 5     expression -> expression PLUS term
Rule 6     expression -> expression MINUS term
Rule 7     term -> term TIMES factor
Rule 8     term -> term DIVIDE factor
Rule 9     term -> factor
Rule 10    factor -> NUMBER
Rule 11    factor -> LPAREN expression RPAREN
Rule 12    empty -> <empty>
Rule 13    op -> EQUAL
Rule 14    op -> BIGGER_THAN_OR_EQUAL_TO
Rule 15    op -> BIGGER_THAN
Rule 16    op -> SMALLER_THAN_OR_EQUAL_TO
Rule 17    op -> SMALLER_THAN
Rule 18    where -> WHERE condition
Rule 19    where -> empty
Rule 20    condition -> expression op expression
Rule 21    condition -> LPAREN condition RPAREN
Rule 22    expression -> expression_term
Rule 23    expression_term -> term
Rule 24    term -> COLUMN_NAME
Rule 25    term -> NUMBER
Rule 26    term -> STRING
Rule 27    condition -> condition AND condition
Rule 28    condition -> condition OR condition
Rule 29    condition -> NOT condition
Rule 30    select -> SELECT column into FROM data where group order limit SIME_COLON
Rule 31    select -> empty
Rule 32    into -> INTO DATASOURCE
Rule 33    into -> empty
Rule 34    group -> GROUP BY column having
Rule 35    group -> empty
Rule 36    having -> HAVING condition
Rule 37    having -> empty
Rule 38    order -> ORDER BY orders
Rule 39    order -> empty
Rule 40    orders -> column way
Rule 41    orders -> orders COMAA orders
Rule 42    way -> ASC
Rule 43    way -> DESC
Rule 44    way -> empty
Rule 45    limit -> LIMIT NUMBER
Rule 46    limit -> empty
Rule 47    column -> TIMES
Rule 48    column -> COLUMN_NAME
Rule 49    column -> DATASOURCE
Rule 50    column -> column COMAA column
Rule 51    column -> empty
Rule 52    data -> DATASOURCE
Rule 53    insert -> INSERT INTO DATASOURCE icolumn VALUES LPAREN value RPAREN SIME_COLON
Rule 54    insert -> INSERT INTO DATASOURCE icolumn LPAREN select RPAREN SIME_COLON
Rule 55    value -> STRING
Rule 56    value -> NUMBER
Rule 57    value -> value COMAA value
Rule 58    icolumn -> LPAREN COLUMN_NAME RPAREN
Rule 59    icolumn -> empty
Rule 60    update -> UPDATE DATASOURCE SET assigns where SIME_COLON
Rule 61    assigns -> column EQUAL value
Rule 62    assigns -> assigns COMAA assigns
Rule 63    delete -> DELETE FROM DATASOURCE where SIME_COLON

Terminals, with rules where they appear

ALL                  : 
AND                  : 27
ARABIC_DOUBLE_QUOTE  : 
AS                   : 
ASC                  : 42
BIGGER_THAN          : 15
BIGGER_THAN_OR_EQUAL_TO : 14
BY                   : 34 38
COLUMN_NAME          : 24 48 58
COLUMN_NUMBER        : 
COMAA                : 41 50 57 62
COUNT                : 
DATASOURCE           : 32 49 52 53 54 60 63
DELETE               : 63
DESC                 : 43
DISTINCT             : 
DIVIDE               : 8
DOT                  : 
DOUBLE_QUOTE         : 
EQUAL                : 13 61
FROM                 : 30 63
GROUP                : 34
HAVING               : 36
INNER                : 
INSERT               : 53 54
INTO                 : 32 53 54
JOIN                 : 
LBRACE               : 
LIMIT                : 45
LPAREN               : 11 21 53 54 58
L_SQ_BRACE           : 
MINUS                : 6
NOT                  : 29
NUMBER               : 10 25 45 56
OR                   : 28
ORDER                : 38
PERCENT              : 
PLUS                 : 5
RBRACE               : 
RPAREN               : 11 21 53 54 58
R_ARABIC_DOUBLE_QUOTE : 
R_SQ_BRACE           : 
SELECT               : 30
SET                  : 60
SIME_COLON           : 30 53 54 60 63
SINGLE_QUOTE         : 
SMALLER_THAN         : 17
SMALLER_THAN_OR_EQUAL_TO : 16
STRING               : 26 55
SUM                  : 
TIMES                : 7 47
UPDATE               : 60
VALUES               : 53
WHERE                : 18
error                : 

Nonterminals, with rules where they appear

assigns              : 60 62 62
column               : 30 34 40 50 50 61
condition            : 18 21 27 27 28 28 29 36
data                 : 30
delete               : 4
empty                : 19 31 33 35 37 39 44 46 51 59
expression           : 5 6 11 20 20
expression_term      : 22
factor               : 7 8 9
group                : 30
having               : 34
icolumn              : 53 54
insert               : 2
into                 : 30
limit                : 30
op                   : 20
order                : 30
orders               : 38 41 41
select               : 1 54
start                : 0
term                 : 5 6 7 8 23
update               : 3
value                : 53 57 57 61
way                  : 40
where                : 30 60 63

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . select
    (2) start -> . insert
    (3) start -> . update
    (4) start -> . delete
    (30) select -> . SELECT column into FROM data where group order limit SIME_COLON
    (31) select -> . empty
    (53) insert -> . INSERT INTO DATASOURCE icolumn VALUES LPAREN value RPAREN SIME_COLON
    (54) insert -> . INSERT INTO DATASOURCE icolumn LPAREN select RPAREN SIME_COLON
    (60) update -> . UPDATE DATASOURCE SET assigns where SIME_COLON
    (63) delete -> . DELETE FROM DATASOURCE where SIME_COLON
    (12) empty -> .

    SELECT          shift and go to state 6
    INSERT          shift and go to state 8
    UPDATE          shift and go to state 9
    DELETE          shift and go to state 10
    $end            reduce using rule 12 (empty -> .)

    start                          shift and go to state 1
    select                         shift and go to state 2
    insert                         shift and go to state 3
    update                         shift and go to state 4
    delete                         shift and go to state 5
    empty                          shift and go to state 7

state 1

    (0) S' -> start .



state 2

    (1) start -> select .

    $end            reduce using rule 1 (start -> select .)


state 3

    (2) start -> insert .

    $end            reduce using rule 2 (start -> insert .)


state 4

    (3) start -> update .

    $end            reduce using rule 3 (start -> update .)


state 5

    (4) start -> delete .

    $end            reduce using rule 4 (start -> delete .)


state 6

    (30) select -> SELECT . column into FROM data where group order limit SIME_COLON
    (47) column -> . TIMES
    (48) column -> . COLUMN_NAME
    (49) column -> . DATASOURCE
    (50) column -> . column COMAA column
    (51) column -> . empty
    (12) empty -> .

    TIMES           shift and go to state 12
    COLUMN_NAME     shift and go to state 13
    DATASOURCE      shift and go to state 14
    COMAA           reduce using rule 12 (empty -> .)
    INTO            reduce using rule 12 (empty -> .)
    FROM            reduce using rule 12 (empty -> .)

    column                         shift and go to state 11
    empty                          shift and go to state 15

state 7

    (31) select -> empty .

    $end            reduce using rule 31 (select -> empty .)
    RPAREN          reduce using rule 31 (select -> empty .)


state 8

    (53) insert -> INSERT . INTO DATASOURCE icolumn VALUES LPAREN value RPAREN SIME_COLON
    (54) insert -> INSERT . INTO DATASOURCE icolumn LPAREN select RPAREN SIME_COLON

    INTO            shift and go to state 16


state 9

    (60) update -> UPDATE . DATASOURCE SET assigns where SIME_COLON

    DATASOURCE      shift and go to state 17


state 10

    (63) delete -> DELETE . FROM DATASOURCE where SIME_COLON

    FROM            shift and go to state 18


state 11

    (30) select -> SELECT column . into FROM data where group order limit SIME_COLON
    (50) column -> column . COMAA column
    (32) into -> . INTO DATASOURCE
    (33) into -> . empty
    (12) empty -> .

    COMAA           shift and go to state 20
    INTO            shift and go to state 21
    FROM            reduce using rule 12 (empty -> .)

    into                           shift and go to state 19
    empty                          shift and go to state 22

state 12

    (47) column -> TIMES .

    COMAA           reduce using rule 47 (column -> TIMES .)
    INTO            reduce using rule 47 (column -> TIMES .)
    FROM            reduce using rule 47 (column -> TIMES .)
    EQUAL           reduce using rule 47 (column -> TIMES .)
    HAVING          reduce using rule 47 (column -> TIMES .)
    ORDER           reduce using rule 47 (column -> TIMES .)
    LIMIT           reduce using rule 47 (column -> TIMES .)
    SIME_COLON      reduce using rule 47 (column -> TIMES .)
    ASC             reduce using rule 47 (column -> TIMES .)
    DESC            reduce using rule 47 (column -> TIMES .)


state 13

    (48) column -> COLUMN_NAME .

    COMAA           reduce using rule 48 (column -> COLUMN_NAME .)
    INTO            reduce using rule 48 (column -> COLUMN_NAME .)
    FROM            reduce using rule 48 (column -> COLUMN_NAME .)
    EQUAL           reduce using rule 48 (column -> COLUMN_NAME .)
    HAVING          reduce using rule 48 (column -> COLUMN_NAME .)
    ORDER           reduce using rule 48 (column -> COLUMN_NAME .)
    LIMIT           reduce using rule 48 (column -> COLUMN_NAME .)
    SIME_COLON      reduce using rule 48 (column -> COLUMN_NAME .)
    ASC             reduce using rule 48 (column -> COLUMN_NAME .)
    DESC            reduce using rule 48 (column -> COLUMN_NAME .)


state 14

    (49) column -> DATASOURCE .

    COMAA           reduce using rule 49 (column -> DATASOURCE .)
    INTO            reduce using rule 49 (column -> DATASOURCE .)
    FROM            reduce using rule 49 (column -> DATASOURCE .)
    EQUAL           reduce using rule 49 (column -> DATASOURCE .)
    HAVING          reduce using rule 49 (column -> DATASOURCE .)
    ORDER           reduce using rule 49 (column -> DATASOURCE .)
    LIMIT           reduce using rule 49 (column -> DATASOURCE .)
    SIME_COLON      reduce using rule 49 (column -> DATASOURCE .)
    ASC             reduce using rule 49 (column -> DATASOURCE .)
    DESC            reduce using rule 49 (column -> DATASOURCE .)


state 15

    (51) column -> empty .

    COMAA           reduce using rule 51 (column -> empty .)
    INTO            reduce using rule 51 (column -> empty .)
    FROM            reduce using rule 51 (column -> empty .)
    EQUAL           reduce using rule 51 (column -> empty .)
    HAVING          reduce using rule 51 (column -> empty .)
    ORDER           reduce using rule 51 (column -> empty .)
    LIMIT           reduce using rule 51 (column -> empty .)
    SIME_COLON      reduce using rule 51 (column -> empty .)
    ASC             reduce using rule 51 (column -> empty .)
    DESC            reduce using rule 51 (column -> empty .)


state 16

    (53) insert -> INSERT INTO . DATASOURCE icolumn VALUES LPAREN value RPAREN SIME_COLON
    (54) insert -> INSERT INTO . DATASOURCE icolumn LPAREN select RPAREN SIME_COLON

    DATASOURCE      shift and go to state 23


state 17

    (60) update -> UPDATE DATASOURCE . SET assigns where SIME_COLON

    SET             shift and go to state 24


state 18

    (63) delete -> DELETE FROM . DATASOURCE where SIME_COLON

    DATASOURCE      shift and go to state 25


state 19

    (30) select -> SELECT column into . FROM data where group order limit SIME_COLON

    FROM            shift and go to state 26


state 20

    (50) column -> column COMAA . column
    (47) column -> . TIMES
    (48) column -> . COLUMN_NAME
    (49) column -> . DATASOURCE
    (50) column -> . column COMAA column
    (51) column -> . empty
    (12) empty -> .

    TIMES           shift and go to state 12
    COLUMN_NAME     shift and go to state 13
    DATASOURCE      shift and go to state 14
    COMAA           reduce using rule 12 (empty -> .)
    INTO            reduce using rule 12 (empty -> .)
    FROM            reduce using rule 12 (empty -> .)
    EQUAL           reduce using rule 12 (empty -> .)
    HAVING          reduce using rule 12 (empty -> .)
    ORDER           reduce using rule 12 (empty -> .)
    LIMIT           reduce using rule 12 (empty -> .)
    SIME_COLON      reduce using rule 12 (empty -> .)
    ASC             reduce using rule 12 (empty -> .)
    DESC            reduce using rule 12 (empty -> .)

    column                         shift and go to state 27
    empty                          shift and go to state 15

state 21

    (32) into -> INTO . DATASOURCE

    DATASOURCE      shift and go to state 28


state 22

    (33) into -> empty .

    FROM            reduce using rule 33 (into -> empty .)


state 23

    (53) insert -> INSERT INTO DATASOURCE . icolumn VALUES LPAREN value RPAREN SIME_COLON
    (54) insert -> INSERT INTO DATASOURCE . icolumn LPAREN select RPAREN SIME_COLON
    (58) icolumn -> . LPAREN COLUMN_NAME RPAREN
    (59) icolumn -> . empty
    (12) empty -> .

  ! shift/reduce conflict for LPAREN resolved as shift
    LPAREN          shift and go to state 30
    VALUES          reduce using rule 12 (empty -> .)

  ! LPAREN          [ reduce using rule 12 (empty -> .) ]

    icolumn                        shift and go to state 29
    empty                          shift and go to state 31

state 24

    (60) update -> UPDATE DATASOURCE SET . assigns where SIME_COLON
    (61) assigns -> . column EQUAL value
    (62) assigns -> . assigns COMAA assigns
    (47) column -> . TIMES
    (48) column -> . COLUMN_NAME
    (49) column -> . DATASOURCE
    (50) column -> . column COMAA column
    (51) column -> . empty
    (12) empty -> .

    TIMES           shift and go to state 12
    COLUMN_NAME     shift and go to state 13
    DATASOURCE      shift and go to state 14
    EQUAL           reduce using rule 12 (empty -> .)
    COMAA           reduce using rule 12 (empty -> .)

    assigns                        shift and go to state 32
    column                         shift and go to state 33
    empty                          shift and go to state 15

state 25

    (63) delete -> DELETE FROM DATASOURCE . where SIME_COLON
    (18) where -> . WHERE condition
    (19) where -> . empty
    (12) empty -> .

    WHERE           shift and go to state 35
    SIME_COLON      reduce using rule 12 (empty -> .)

    where                          shift and go to state 34
    empty                          shift and go to state 36

state 26

    (30) select -> SELECT column into FROM . data where group order limit SIME_COLON
    (52) data -> . DATASOURCE

    DATASOURCE      shift and go to state 38

    data                           shift and go to state 37

state 27

    (50) column -> column COMAA column .
    (50) column -> column . COMAA column

  ! shift/reduce conflict for COMAA resolved as shift
    INTO            reduce using rule 50 (column -> column COMAA column .)
    FROM            reduce using rule 50 (column -> column COMAA column .)
    EQUAL           reduce using rule 50 (column -> column COMAA column .)
    HAVING          reduce using rule 50 (column -> column COMAA column .)
    ORDER           reduce using rule 50 (column -> column COMAA column .)
    LIMIT           reduce using rule 50 (column -> column COMAA column .)
    SIME_COLON      reduce using rule 50 (column -> column COMAA column .)
    ASC             reduce using rule 50 (column -> column COMAA column .)
    DESC            reduce using rule 50 (column -> column COMAA column .)
    COMAA           shift and go to state 20

  ! COMAA           [ reduce using rule 50 (column -> column COMAA column .) ]


state 28

    (32) into -> INTO DATASOURCE .

    FROM            reduce using rule 32 (into -> INTO DATASOURCE .)


state 29

    (53) insert -> INSERT INTO DATASOURCE icolumn . VALUES LPAREN value RPAREN SIME_COLON
    (54) insert -> INSERT INTO DATASOURCE icolumn . LPAREN select RPAREN SIME_COLON

    VALUES          shift and go to state 39
    LPAREN          shift and go to state 40


state 30

    (58) icolumn -> LPAREN . COLUMN_NAME RPAREN

    COLUMN_NAME     shift and go to state 41


state 31

    (59) icolumn -> empty .

    VALUES          reduce using rule 59 (icolumn -> empty .)
    LPAREN          reduce using rule 59 (icolumn -> empty .)


state 32

    (60) update -> UPDATE DATASOURCE SET assigns . where SIME_COLON
    (62) assigns -> assigns . COMAA assigns
    (18) where -> . WHERE condition
    (19) where -> . empty
    (12) empty -> .

    COMAA           shift and go to state 43
    WHERE           shift and go to state 35
    SIME_COLON      reduce using rule 12 (empty -> .)

    where                          shift and go to state 42
    empty                          shift and go to state 36

state 33

    (61) assigns -> column . EQUAL value
    (50) column -> column . COMAA column

    EQUAL           shift and go to state 44
    COMAA           shift and go to state 20


state 34

    (63) delete -> DELETE FROM DATASOURCE where . SIME_COLON

    SIME_COLON      shift and go to state 45


state 35

    (18) where -> WHERE . condition
    (20) condition -> . expression op expression
    (21) condition -> . LPAREN condition RPAREN
    (27) condition -> . condition AND condition
    (28) condition -> . condition OR condition
    (29) condition -> . NOT condition
    (5) expression -> . expression PLUS term
    (6) expression -> . expression MINUS term
    (22) expression -> . expression_term
    (23) expression_term -> . term
    (7) term -> . term TIMES factor
    (8) term -> . term DIVIDE factor
    (9) term -> . factor
    (24) term -> . COLUMN_NAME
    (25) term -> . NUMBER
    (26) term -> . STRING
    (10) factor -> . NUMBER
    (11) factor -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 48
    NOT             shift and go to state 49
    COLUMN_NAME     shift and go to state 53
    NUMBER          shift and go to state 54
    STRING          shift and go to state 55

    condition                      shift and go to state 46
    expression                     shift and go to state 47
    term                           shift and go to state 50
    expression_term                shift and go to state 51
    factor                         shift and go to state 52

state 36

    (19) where -> empty .

    SIME_COLON      reduce using rule 19 (where -> empty .)
    GROUP           reduce using rule 19 (where -> empty .)
    ORDER           reduce using rule 19 (where -> empty .)
    LIMIT           reduce using rule 19 (where -> empty .)


state 37

    (30) select -> SELECT column into FROM data . where group order limit SIME_COLON
    (18) where -> . WHERE condition
    (19) where -> . empty
    (12) empty -> .

    WHERE           shift and go to state 35
    GROUP           reduce using rule 12 (empty -> .)
    ORDER           reduce using rule 12 (empty -> .)
    LIMIT           reduce using rule 12 (empty -> .)
    SIME_COLON      reduce using rule 12 (empty -> .)

    where                          shift and go to state 56
    empty                          shift and go to state 36

state 38

    (52) data -> DATASOURCE .

    WHERE           reduce using rule 52 (data -> DATASOURCE .)
    GROUP           reduce using rule 52 (data -> DATASOURCE .)
    ORDER           reduce using rule 52 (data -> DATASOURCE .)
    LIMIT           reduce using rule 52 (data -> DATASOURCE .)
    SIME_COLON      reduce using rule 52 (data -> DATASOURCE .)


state 39

    (53) insert -> INSERT INTO DATASOURCE icolumn VALUES . LPAREN value RPAREN SIME_COLON

    LPAREN          shift and go to state 57


state 40

    (54) insert -> INSERT INTO DATASOURCE icolumn LPAREN . select RPAREN SIME_COLON
    (30) select -> . SELECT column into FROM data where group order limit SIME_COLON
    (31) select -> . empty
    (12) empty -> .

    SELECT          shift and go to state 6
    RPAREN          reduce using rule 12 (empty -> .)

    select                         shift and go to state 58
    empty                          shift and go to state 7

state 41

    (58) icolumn -> LPAREN COLUMN_NAME . RPAREN

    RPAREN          shift and go to state 59


state 42

    (60) update -> UPDATE DATASOURCE SET assigns where . SIME_COLON

    SIME_COLON      shift and go to state 60


state 43

    (62) assigns -> assigns COMAA . assigns
    (61) assigns -> . column EQUAL value
    (62) assigns -> . assigns COMAA assigns
    (47) column -> . TIMES
    (48) column -> . COLUMN_NAME
    (49) column -> . DATASOURCE
    (50) column -> . column COMAA column
    (51) column -> . empty
    (12) empty -> .

    TIMES           shift and go to state 12
    COLUMN_NAME     shift and go to state 13
    DATASOURCE      shift and go to state 14
    EQUAL           reduce using rule 12 (empty -> .)
    COMAA           reduce using rule 12 (empty -> .)

    assigns                        shift and go to state 61
    column                         shift and go to state 33
    empty                          shift and go to state 15

state 44

    (61) assigns -> column EQUAL . value
    (55) value -> . STRING
    (56) value -> . NUMBER
    (57) value -> . value COMAA value

    STRING          shift and go to state 63
    NUMBER          shift and go to state 64

    value                          shift and go to state 62

state 45

    (63) delete -> DELETE FROM DATASOURCE where SIME_COLON .

    $end            reduce using rule 63 (delete -> DELETE FROM DATASOURCE where SIME_COLON .)


state 46

    (18) where -> WHERE condition .
    (27) condition -> condition . AND condition
    (28) condition -> condition . OR condition

    SIME_COLON      reduce using rule 18 (where -> WHERE condition .)
    GROUP           reduce using rule 18 (where -> WHERE condition .)
    ORDER           reduce using rule 18 (where -> WHERE condition .)
    LIMIT           reduce using rule 18 (where -> WHERE condition .)
    AND             shift and go to state 65
    OR              shift and go to state 66


state 47

    (20) condition -> expression . op expression
    (5) expression -> expression . PLUS term
    (6) expression -> expression . MINUS term
    (13) op -> . EQUAL
    (14) op -> . BIGGER_THAN_OR_EQUAL_TO
    (15) op -> . BIGGER_THAN
    (16) op -> . SMALLER_THAN_OR_EQUAL_TO
    (17) op -> . SMALLER_THAN

    PLUS            shift and go to state 68
    MINUS           shift and go to state 69
    EQUAL           shift and go to state 70
    BIGGER_THAN_OR_EQUAL_TO shift and go to state 71
    BIGGER_THAN     shift and go to state 72
    SMALLER_THAN_OR_EQUAL_TO shift and go to state 73
    SMALLER_THAN    shift and go to state 74

    op                             shift and go to state 67

state 48

    (21) condition -> LPAREN . condition RPAREN
    (11) factor -> LPAREN . expression RPAREN
    (20) condition -> . expression op expression
    (21) condition -> . LPAREN condition RPAREN
    (27) condition -> . condition AND condition
    (28) condition -> . condition OR condition
    (29) condition -> . NOT condition
    (5) expression -> . expression PLUS term
    (6) expression -> . expression MINUS term
    (22) expression -> . expression_term
    (23) expression_term -> . term
    (7) term -> . term TIMES factor
    (8) term -> . term DIVIDE factor
    (9) term -> . factor
    (24) term -> . COLUMN_NAME
    (25) term -> . NUMBER
    (26) term -> . STRING
    (10) factor -> . NUMBER
    (11) factor -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 48
    NOT             shift and go to state 49
    COLUMN_NAME     shift and go to state 53
    NUMBER          shift and go to state 54
    STRING          shift and go to state 55

    condition                      shift and go to state 75
    expression                     shift and go to state 76
    term                           shift and go to state 50
    expression_term                shift and go to state 51
    factor                         shift and go to state 52

state 49

    (29) condition -> NOT . condition
    (20) condition -> . expression op expression
    (21) condition -> . LPAREN condition RPAREN
    (27) condition -> . condition AND condition
    (28) condition -> . condition OR condition
    (29) condition -> . NOT condition
    (5) expression -> . expression PLUS term
    (6) expression -> . expression MINUS term
    (22) expression -> . expression_term
    (23) expression_term -> . term
    (7) term -> . term TIMES factor
    (8) term -> . term DIVIDE factor
    (9) term -> . factor
    (24) term -> . COLUMN_NAME
    (25) term -> . NUMBER
    (26) term -> . STRING
    (10) factor -> . NUMBER
    (11) factor -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 48
    NOT             shift and go to state 49
    COLUMN_NAME     shift and go to state 53
    NUMBER          shift and go to state 54
    STRING          shift and go to state 55

    condition                      shift and go to state 77
    expression                     shift and go to state 47
    term                           shift and go to state 50
    expression_term                shift and go to state 51
    factor                         shift and go to state 52

state 50

    (23) expression_term -> term .
    (7) term -> term . TIMES factor
    (8) term -> term . DIVIDE factor

    PLUS            reduce using rule 23 (expression_term -> term .)
    MINUS           reduce using rule 23 (expression_term -> term .)
    EQUAL           reduce using rule 23 (expression_term -> term .)
    BIGGER_THAN_OR_EQUAL_TO reduce using rule 23 (expression_term -> term .)
    BIGGER_THAN     reduce using rule 23 (expression_term -> term .)
    SMALLER_THAN_OR_EQUAL_TO reduce using rule 23 (expression_term -> term .)
    SMALLER_THAN    reduce using rule 23 (expression_term -> term .)
    RPAREN          reduce using rule 23 (expression_term -> term .)
    AND             reduce using rule 23 (expression_term -> term .)
    OR              reduce using rule 23 (expression_term -> term .)
    SIME_COLON      reduce using rule 23 (expression_term -> term .)
    GROUP           reduce using rule 23 (expression_term -> term .)
    ORDER           reduce using rule 23 (expression_term -> term .)
    LIMIT           reduce using rule 23 (expression_term -> term .)
    TIMES           shift and go to state 78
    DIVIDE          shift and go to state 79


state 51

    (22) expression -> expression_term .

    PLUS            reduce using rule 22 (expression -> expression_term .)
    MINUS           reduce using rule 22 (expression -> expression_term .)
    EQUAL           reduce using rule 22 (expression -> expression_term .)
    BIGGER_THAN_OR_EQUAL_TO reduce using rule 22 (expression -> expression_term .)
    BIGGER_THAN     reduce using rule 22 (expression -> expression_term .)
    SMALLER_THAN_OR_EQUAL_TO reduce using rule 22 (expression -> expression_term .)
    SMALLER_THAN    reduce using rule 22 (expression -> expression_term .)
    RPAREN          reduce using rule 22 (expression -> expression_term .)
    AND             reduce using rule 22 (expression -> expression_term .)
    OR              reduce using rule 22 (expression -> expression_term .)
    SIME_COLON      reduce using rule 22 (expression -> expression_term .)
    GROUP           reduce using rule 22 (expression -> expression_term .)
    ORDER           reduce using rule 22 (expression -> expression_term .)
    LIMIT           reduce using rule 22 (expression -> expression_term .)


state 52

    (9) term -> factor .

    TIMES           reduce using rule 9 (term -> factor .)
    DIVIDE          reduce using rule 9 (term -> factor .)
    PLUS            reduce using rule 9 (term -> factor .)
    MINUS           reduce using rule 9 (term -> factor .)
    EQUAL           reduce using rule 9 (term -> factor .)
    BIGGER_THAN_OR_EQUAL_TO reduce using rule 9 (term -> factor .)
    BIGGER_THAN     reduce using rule 9 (term -> factor .)
    SMALLER_THAN_OR_EQUAL_TO reduce using rule 9 (term -> factor .)
    SMALLER_THAN    reduce using rule 9 (term -> factor .)
    RPAREN          reduce using rule 9 (term -> factor .)
    AND             reduce using rule 9 (term -> factor .)
    OR              reduce using rule 9 (term -> factor .)
    SIME_COLON      reduce using rule 9 (term -> factor .)
    GROUP           reduce using rule 9 (term -> factor .)
    ORDER           reduce using rule 9 (term -> factor .)
    LIMIT           reduce using rule 9 (term -> factor .)


state 53

    (24) term -> COLUMN_NAME .

    TIMES           reduce using rule 24 (term -> COLUMN_NAME .)
    DIVIDE          reduce using rule 24 (term -> COLUMN_NAME .)
    PLUS            reduce using rule 24 (term -> COLUMN_NAME .)
    MINUS           reduce using rule 24 (term -> COLUMN_NAME .)
    EQUAL           reduce using rule 24 (term -> COLUMN_NAME .)
    BIGGER_THAN_OR_EQUAL_TO reduce using rule 24 (term -> COLUMN_NAME .)
    BIGGER_THAN     reduce using rule 24 (term -> COLUMN_NAME .)
    SMALLER_THAN_OR_EQUAL_TO reduce using rule 24 (term -> COLUMN_NAME .)
    SMALLER_THAN    reduce using rule 24 (term -> COLUMN_NAME .)
    RPAREN          reduce using rule 24 (term -> COLUMN_NAME .)
    AND             reduce using rule 24 (term -> COLUMN_NAME .)
    OR              reduce using rule 24 (term -> COLUMN_NAME .)
    SIME_COLON      reduce using rule 24 (term -> COLUMN_NAME .)
    GROUP           reduce using rule 24 (term -> COLUMN_NAME .)
    ORDER           reduce using rule 24 (term -> COLUMN_NAME .)
    LIMIT           reduce using rule 24 (term -> COLUMN_NAME .)


state 54

    (25) term -> NUMBER .
    (10) factor -> NUMBER .

  ! reduce/reduce conflict for TIMES resolved using rule 10 (factor -> NUMBER .)
  ! reduce/reduce conflict for DIVIDE resolved using rule 10 (factor -> NUMBER .)
  ! reduce/reduce conflict for PLUS resolved using rule 10 (factor -> NUMBER .)
  ! reduce/reduce conflict for MINUS resolved using rule 10 (factor -> NUMBER .)
  ! reduce/reduce conflict for EQUAL resolved using rule 10 (factor -> NUMBER .)
  ! reduce/reduce conflict for BIGGER_THAN_OR_EQUAL_TO resolved using rule 10 (factor -> NUMBER .)
  ! reduce/reduce conflict for BIGGER_THAN resolved using rule 10 (factor -> NUMBER .)
  ! reduce/reduce conflict for SMALLER_THAN_OR_EQUAL_TO resolved using rule 10 (factor -> NUMBER .)
  ! reduce/reduce conflict for SMALLER_THAN resolved using rule 10 (factor -> NUMBER .)
  ! reduce/reduce conflict for RPAREN resolved using rule 10 (factor -> NUMBER .)
  ! reduce/reduce conflict for AND resolved using rule 10 (factor -> NUMBER .)
  ! reduce/reduce conflict for OR resolved using rule 10 (factor -> NUMBER .)
  ! reduce/reduce conflict for SIME_COLON resolved using rule 10 (factor -> NUMBER .)
  ! reduce/reduce conflict for GROUP resolved using rule 10 (factor -> NUMBER .)
  ! reduce/reduce conflict for ORDER resolved using rule 10 (factor -> NUMBER .)
  ! reduce/reduce conflict for LIMIT resolved using rule 10 (factor -> NUMBER .)
    TIMES           reduce using rule 10 (factor -> NUMBER .)
    DIVIDE          reduce using rule 10 (factor -> NUMBER .)
    PLUS            reduce using rule 10 (factor -> NUMBER .)
    MINUS           reduce using rule 10 (factor -> NUMBER .)
    EQUAL           reduce using rule 10 (factor -> NUMBER .)
    BIGGER_THAN_OR_EQUAL_TO reduce using rule 10 (factor -> NUMBER .)
    BIGGER_THAN     reduce using rule 10 (factor -> NUMBER .)
    SMALLER_THAN_OR_EQUAL_TO reduce using rule 10 (factor -> NUMBER .)
    SMALLER_THAN    reduce using rule 10 (factor -> NUMBER .)
    RPAREN          reduce using rule 10 (factor -> NUMBER .)
    AND             reduce using rule 10 (factor -> NUMBER .)
    OR              reduce using rule 10 (factor -> NUMBER .)
    SIME_COLON      reduce using rule 10 (factor -> NUMBER .)
    GROUP           reduce using rule 10 (factor -> NUMBER .)
    ORDER           reduce using rule 10 (factor -> NUMBER .)
    LIMIT           reduce using rule 10 (factor -> NUMBER .)

  ! TIMES           [ reduce using rule 25 (term -> NUMBER .) ]
  ! DIVIDE          [ reduce using rule 25 (term -> NUMBER .) ]
  ! PLUS            [ reduce using rule 25 (term -> NUMBER .) ]
  ! MINUS           [ reduce using rule 25 (term -> NUMBER .) ]
  ! EQUAL           [ reduce using rule 25 (term -> NUMBER .) ]
  ! BIGGER_THAN_OR_EQUAL_TO [ reduce using rule 25 (term -> NUMBER .) ]
  ! BIGGER_THAN     [ reduce using rule 25 (term -> NUMBER .) ]
  ! SMALLER_THAN_OR_EQUAL_TO [ reduce using rule 25 (term -> NUMBER .) ]
  ! SMALLER_THAN    [ reduce using rule 25 (term -> NUMBER .) ]
  ! RPAREN          [ reduce using rule 25 (term -> NUMBER .) ]
  ! AND             [ reduce using rule 25 (term -> NUMBER .) ]
  ! OR              [ reduce using rule 25 (term -> NUMBER .) ]
  ! SIME_COLON      [ reduce using rule 25 (term -> NUMBER .) ]
  ! GROUP           [ reduce using rule 25 (term -> NUMBER .) ]
  ! ORDER           [ reduce using rule 25 (term -> NUMBER .) ]
  ! LIMIT           [ reduce using rule 25 (term -> NUMBER .) ]


state 55

    (26) term -> STRING .

    TIMES           reduce using rule 26 (term -> STRING .)
    DIVIDE          reduce using rule 26 (term -> STRING .)
    PLUS            reduce using rule 26 (term -> STRING .)
    MINUS           reduce using rule 26 (term -> STRING .)
    EQUAL           reduce using rule 26 (term -> STRING .)
    BIGGER_THAN_OR_EQUAL_TO reduce using rule 26 (term -> STRING .)
    BIGGER_THAN     reduce using rule 26 (term -> STRING .)
    SMALLER_THAN_OR_EQUAL_TO reduce using rule 26 (term -> STRING .)
    SMALLER_THAN    reduce using rule 26 (term -> STRING .)
    RPAREN          reduce using rule 26 (term -> STRING .)
    AND             reduce using rule 26 (term -> STRING .)
    OR              reduce using rule 26 (term -> STRING .)
    SIME_COLON      reduce using rule 26 (term -> STRING .)
    GROUP           reduce using rule 26 (term -> STRING .)
    ORDER           reduce using rule 26 (term -> STRING .)
    LIMIT           reduce using rule 26 (term -> STRING .)


state 56

    (30) select -> SELECT column into FROM data where . group order limit SIME_COLON
    (34) group -> . GROUP BY column having
    (35) group -> . empty
    (12) empty -> .
